statics/landing_page/assets/css/main.css
/* ... */
	::-webkit-input-placeholder {
		color: #e0e0e0 !important;
	}

	:-moz-placeholder {
		color: #e0e0e0 !important;
	}

	::-moz-placeholder {
		color: #e0e0e0 !important;
	}

	:-ms-input-placeholder {
		color: #e0e0e0 !important;
	}

	.formerize-placeholder {
		color: #e0e0e0 !important;
	}

/* Icon */

	.icon {
		text-decoration: none;
		border-bottom: none;
		position: relative;
	}

		.icon:before {
			-moz-osx-font-smoothing: grayscale;
			-webkit-font-smoothing: antialiased;
			display: inline-block;
			font-style: normal;
			font-variant: normal;
			text-rendering: auto;
			line-height: 1;
			text-transform: none !important;
			font-family: 'Font Awesome 5 Free';
			font-weight: 400;
		}

		.icon > .label {
			display: none;
		}

		.icon:before {
			line-height: inherit;
		}

		.icon.solid:before {
			font-weight: 900;
		}

		.icon.brands:before {
			font-family: 'Font Awesome 5 Brands';
		}

	.icon {
		color: #e0e0e0;
	}

/* Image */

	.image {
		border-radius: 6px;
		border: 0;
		display: inline-block;
		position: relative;
		overflow: hidden;
		object-fit: contain;
	}

		.image img {
			border-radius: 6px;
			display: block;
		}

		.image.left, .image.right {
			max-width: 40%;
		}

			.image.left img, .image.right img {
				width: 100%;
			}

		.image.left {
			float: left;
			margin: 0 1.5em 1em 0;
			top: 0.25em;
		}

		.image.right {
			float: right;
			margin: 0 0 1em 1.5em;
			top: 0.25em;
		}

		.image.fit {
			display: block;
			margin: 0 0 2em 0;
			width: 100%;
		}

			.image.fit img {
				width: 100%;
			}

		.image.main {
			display: block;
			margin: 0 0 3em 0;
			width: 100%;
		}

			.image.main img {
				width: 100%;
			}

		.image.phone {
			box-shadow: none;
			border-radius: 0;
			margin: 0 0 3em 0;
			width: 13em;
		}

			.image.phone img {
				border-radius: 0;
				display: block;
				position: relative;
				width: 100%;
			}

			.image.phone .inner, .image.phone:before, .image.phone:after {
				display: block;
				border: solid 2px rgba(255, 255, 255, 0.25);
			}

			.image.phone .inner {
				position: relative;
			}

				.image.phone .inner:before, .image.phone .inner:after {
					content: '';
					position: absolute;
					left: 50%;
				}

				.image.phone .inner:before {
					top: -1.375em;
					margin-left: -1em;
					width: 2em;
					height: 0.25em;
					border-radius: 0.5em;
					background: rgba(255, 255, 255, 0.25);
				}

				.image.phone .inner:after {
					bottom: -2.75em;
					margin-left: -1em;
					width: 2em;
					height: 2em;
					border-radius: 100%;
					border: solid 2px rgba(255, 255, 255, 0.25);
				}

			.image.phone:before, .image.phone:after {
				content: '';
			}

			.image.phone:before {
				height: 2.5em;
				border-radius: 1em 1em 0 0;
				border-bottom: 0;
			}

			.image.phone:after {
				height: 3.5em;
				border-radius: 0 0 1em 1em;
				border-top: 0;
			}

	.image {
		box-shadow: 0 0 0 4px #ffffff, 0 0 0 5px #e6e6e6;
	}

		.image.phone {
			box-shadow: none;
		}

			.image.phone .inner, .image.phone:before, .image.phone:after {
				border-color: #e6e6e6;
			}

			.image.phone .inner:before {
				background: #e6e6e6;
			}

			.image.phone .inner:after {
				border-color: #e6e6e6;
			}

/* List */

	ol {
		list-style: decimal;
		margin: 0 0 2em 0;
		padding-left: 1.25em;
	}

		ol li {
			padding-left: 0.25em;
		}

	ul {
		list-style: disc;
		margin: 0 0 2em 0;
		padding-left: 1em;
	}

		ul li {
			padding-left: 0.5em;
		}

		ul.alt {
			list-style: none;
			padding-left: 0;
		}

			ul.alt li {
				border-top-style: solid;
				border-top-width: 1px;
				padding: 0.5em 0;
			}

				ul.alt li:first-child {
					border-top: 0;
					padding-top: 0;
				}

	dl {
		margin: 0 0 2em 0;
	}

		dl dt {
			display: block;
			font-weight: bold;
			margin: 0 0 1em 0;
		}

		dl dd {
			margin-left: 2em;
		}

	ul.alt > li {
		border-top-color: #e6e6e6;
	}

/* Actions */

	ul.actions {
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		cursor: default;
		list-style: none;
		margin-left: -1em;
		padding-left: 0;
	}

		ul.actions li {
			padding: 0 0 0 1em;
			vertical-align: middle;
		}

		ul.actions.special {
			-moz-justify-content: center;
			-webkit-justify-content: center;
			-ms-justify-content: center;
			justify-content: center;
			width: 100%;
			margin-left: 0;
		}

			ul.actions.special li:first-child {
				padding-left: 0;
			}

		ul.actions.stacked {
			-moz-flex-direction: column;
			-webkit-flex-direction: column;
			-ms-flex-direction: column;
			flex-direction: column;
			margin-left: 0;
		}

			ul.actions.stacked li {
				padding: 1.3em 0 0 0;
			}

				ul.actions.stacked li:first-child {
					padding-top: 0;
				}

		ul.actions.fit {
			width: calc(100% + 1em);
		}

			ul.actions.fit li {
				-moz-flex-grow: 1;
				-webkit-flex-grow: 1;
				-ms-flex-grow: 1;
				flex-grow: 1;
				-moz-flex-shrink: 1;
				-webkit-flex-shrink: 1;
				-ms-flex-shrink: 1;
				flex-shrink: 1;
				width: 100%;
			}

				ul.actions.fit li > * {
					width: 100%;
				}

			ul.actions.fit.stacked {
				width: 100%;
			}
/* ... */

